Thumbnails in Filebrowser disappearing, Splitting the Filebrowser Area Window chrashes Blender #71019

Closed
opened 2019-10-22 15:51:23 +02:00 by Christoph · 6 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-21 18:07, hash: 388c954cb5
Worked: (optional)

Short description of error
thumbnails are disappearing in the filebrowser window when the "Filter" is activated with any filter-option and deactivated again. The thumbnails won´t appear again in this filebrowser window. trying to split this particular window with the crosshair-cursor will make blender crash.
This bug only happens only when the filebrowser is part of the workspace. the floating-window filebrowser is ok.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

Set Viewport to Filebrowser (Shift-F1)
Use the dropdown menu to set view to thumbnails
Browse any folder with pictures in it
Use dropdown menue to activate the Filter, set any filteroption
Deactivate the Filter again.

  • at this point the thumbnails can´t be reactivated in this Filebrowser
    Try to split the Filebrowser with the crosshair at any corner will crash Blender

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-21 18:07, hash: `388c954cb5` Worked: (optional) **Short description of error** thumbnails are disappearing in the filebrowser window when the "Filter" is activated with any filter-option and deactivated again. The thumbnails won´t appear again in this filebrowser window. trying to split this particular window with the crosshair-cursor will make blender crash. This bug only happens only when the filebrowser is part of the workspace. the floating-window filebrowser is ok. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] Set Viewport to Filebrowser (Shift-F1) Use the dropdown menu to set view to thumbnails Browse any folder with pictures in it Use dropdown menue to activate the Filter, set any filteroption Deactivate the Filter again. - > at this point the thumbnails can´t be reactivated in this Filebrowser Try to split the Filebrowser with the crosshair at any corner will crash Blender
Author

Added subscriber: @ChrisGraz

Added subscriber: @ChrisGraz
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Julian Eisel was assigned by Philipp Oeser 2019-10-23 11:13:10 +02:00
Member

@JulianEisel : this seems to be tied to #70921 as well (in that: master seems to be fine, in 2.81-release though, I can reproduce the case with the images not loading [can see the icons, but images are not showing])

I cannot reproduce the crash in linux though (I assume this is a windows-only thing, since sub windows are different there?)

@JulianEisel : this seems to be tied to #70921 as well (in that: master seems to be fine, in 2.81-release though, I can reproduce the case with the images not loading [can see the icons, but images are not showing]) I cannot reproduce the crash in linux though (I assume this is a windows-only thing, since sub windows are different there?)
Member

Alright, so this actually seems to be caused by 9100982e80 too, but my changes in b546263642 happened to fix it "accidentally".
Have to check on the best way to fix it, there are some options.

Alright, so this actually seems to be caused by 9100982e80 too, but my changes in b546263642 happened to fix it "accidentally". Have to check on the best way to fix it, there are some options.

This issue was referenced by 7c1fbe24ca

This issue was referenced by 7c1fbe24ca33a13e61043aa73b2fd7db20627171
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71019
No description provided.