Fix T71019: Disappearing file thumbnails & crash on area split

When opening the file browser as regular editor, the ID filter flags
as stored in FileSelectParams were not set explicitly, so they were 0.
Since 9100982e8097, the value actually passed to the filtering could
differ from that, causing the file list cache to be constantly updated
on every redraw.

Caused by 9100982e8097.

Note that this "accidentially" got fixed in master with b54626364253,
which is why the issue only showed up in the release branch from that
point.